fix box-shadow under hidden overflow

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -5,8 +5,6 @@
 
   display: flex;
   flex-direction: column;
-
-  height: 100vh;
 }
 
 .heading {
@@ -19,6 +17,7 @@
 .main {
   composes: mb-10 from global;
 
+  height: calc(98vh - 248px);
   max-width: 1240px;
   align-self: center;
 
@@ -26,5 +25,4 @@
   justify-content: center;  
   gap: 40px;
 
-  overflow: hidden;
 }
